--- a/apps/aiostreams/default_config.json
+++ b/apps/aiostreams/default_config.json
@@ -46,16 +46,14 @@
       "env_variable": "PORT",
       "default": 3000,
       "placeholder": "3000",
-      "hint": "Port on which the addon listens.",
-      "required": true
+      "hint": "Port on which the addon listens."
     },
     {
       "type": "password",
       "label": "Secret Key (64-hex chars)",
       "env_variable": "SECRET_KEY",
       "placeholder": "(auto-generated if blank)",
-      "hint": "64-char hex string to encrypt config; generate via openssl rand -hex 32.",
-      "required": true
+      "hint": "64-char hex string to encrypt config; generate via openssl rand -hex 32."
     },
     {
       "type": "text",
@@ -86,8 +84,7 @@
       "env_variable": "LOG_FORMAT",
       "default": "text",
       "placeholder": "text",
-      "hint": "Log output format: json or text.",
-      "required": true
+      "hint": "Log output format: json or text."
     },
     {
       "type": "boolean",
@@ -117,8 +114,7 @@
       "env_variable": "MAX_ADDONS",
       "default": 15,
       "placeholder": "15",
-      "hint": "Max number of addons per instance.",
-      "required": true
+      "hint": "Max number of addons per instance."
     },
     {
       "type": "number",
@@ -126,8 +122,7 @@
       "env_variable": "MAX_KEYWORD_FILTERS",
       "default": 30,
       "placeholder": "30",
-      "hint": "Max keyword filters allowed.",
-      "required": true
+      "hint": "Max keyword filters allowed."
     },
     {
       "type": "number",
@@ -135,8 +130,7 @@
       "env_variable": "MAX_REGEX_SORT_PATTERNS",
       "default": 30,
       "placeholder": "30",
-      "hint": "Max regex patterns for sorting.",
-      "required": true
+      "hint": "Max regex patterns for sorting."
     },
     {
       "type": "number",
@@ -144,8 +138,7 @@
       "env_variable": "MAX_MOVIE_SIZE",
       "default": 161061273600,
       "placeholder": "161061273600",
-      "hint": "Upper byte limit for movie size slider.",
-      "required": true
+      "hint": "Upper byte limit for movie size slider."
     },
     {
       "type": "number",
@@ -153,8 +146,7 @@
       "env_variable": "MAX_EPISODE_SIZE",
       "default": 161061273600,
       "placeholder": "161061273600",
-      "hint": "Upper byte limit for episode size slider.",
-      "required": true
+      "hint": "Upper byte limit for episode size slider."
     },
     {
       "type": "number",
@@ -162,8 +154,7 @@
       "env_variable": "MAX_TIMEOUT",
       "default": 50000,
       "placeholder": "50000",
-      "hint": "Maximum overrideable timeout in ms.",
-      "required": true
+      "hint": "Maximum overrideable timeout in ms."
     },
     {
       "type": "number",
@@ -171,8 +162,7 @@
       "env_variable": "MIN_TIMEOUT",
       "default": 1000,
       "placeholder": "1000",
-      "hint": "Minimum overrideable timeout in ms.",
-      "required": true
+      "hint": "Minimum overrideable timeout in ms."
     },
     {
       "type": "number",
@@ -180,8 +170,7 @@
       "env_variable": "DEFAULT_TIMEOUT",
       "default": 15000,
       "placeholder": "15000",
-      "hint": "Default request timeout if not overridden.",
-      "required": true
+      "hint": "Default request timeout if not overridden."
     },
     {
       "type": "text",
@@ -210,8 +199,7 @@
       "env_variable": "MEDIAFLOW_IP_TIMEOUT",
       "default": 30000,
       "placeholder": "30000",
-      "hint": "Timeout for fetching IP from MediaFlow before error.",
-      "required": true
+      "hint": "Timeout for fetching IP from MediaFlow before error."
     },
     {
       "type": "url",
@@ -249,8 +237,7 @@
       "env_variable": "STREMTHRU_TIMEOUT",
       "default": 30000,
       "placeholder": "30000",
-      "hint": "Timeout for requests to StremThru instance.",
-      "required": true
+      "hint": "Timeout for requests to StremThru instance."
     },
     {
       "type": "url",
@@ -294,32 +281,28 @@
       "label": "Default Comet Timeout (ms)",
       "env_variable": "DEFAULT_COMET_TIMEOUT",
       "placeholder": "(inherits DEFAULT_TIMEOUT)",
-      "hint": "Default timeout for Comet API requests.",
-      "required": true
+      "hint": "Default timeout for Comet API requests."
     },
     {
       "type": "text",
       "label": "Force Comet Hostname",
       "env_variable": "FORCE_COMET_HOSTNAME",
       "placeholder": "(blank)",
-      "hint": "Public hostname for internal Comet URL configurations.",
-      "required": true
+      "hint": "Public hostname for internal Comet URL configurations."
     },
     {
       "type": "text",
       "label": "Force Comet Port",
       "env_variable": "FORCE_COMET_PORT",
       "placeholder": "(blank)",
-      "hint": "Public port for internal Comet URL configurations.",
-      "required": true
+      "hint": "Public port for internal Comet URL configurations."
     },
     {
       "type": "text",
       "label": "Force Comet Protocol",
       "env_variable": "FORCE_COMET_PROTOCOL",
       "placeholder": "(blank)",
-      "hint": "Public protocol (http/https) for internal Comet.",
-      "required": true
+      "hint": "Public protocol (http/https) for internal Comet."
     },
     {
       "type": "url",
@@ -334,8 +317,7 @@
       "label": "Default MediaFusion Timeout (ms)",
       "env_variable": "DEFAULT_MEDIAFUSION_TIMEOUT",
       "placeholder": "(inherits DEFAULT_TIMEOUT)",
-      "hint": "Timeout for MediaFusion requests.",
-      "required": true
+      "hint": "Timeout for MediaFusion requests."
     },
     {
       "type": "number",
@@ -343,8 +325,7 @@
       "env_variable": "MEDIAFUSION_CONFIG_TIMEOUT",
       "default": 5000,
       "placeholder": "5000",
-      "hint": "Timeout for /encrypt-user-data endpoint.",
-      "required": true
+      "hint": "Timeout for /encrypt-user-data endpoint."
     },
     {
       "type": "text",
@@ -367,16 +348,14 @@
       "env_variable": "DEFAULT_JACKETTIO_INDEXERS",
       "default": "[\"bitsearch\",\"eztv\",\"thepiratebay\",\"therarbg\",\"yts\"]",
       "placeholder": "[\"bitsearch\",\"eztv\",\"thepiratebay\",\"therarbg\",\"yts\"]",
-      "hint": "JSON array of default JackettIO indexers.",
-      "required": true
+      "hint": "JSON array of default JackettIO indexers."
     },
     {
       "type": "number",
       "label": "Default JackettIO Timeout (ms)",
       "env_variable": "DEFAULT_JACKETTIO_TIMEOUT",
       "placeholder": "(inherits DEFAULT_TIMEOUT)",
-      "hint": "Timeout for JackettIO API requests.",
-      "required": true
+      "hint": "Timeout for JackettIO API requests."
     },
     {
       "type": "url",
@@ -391,24 +370,21 @@
       "label": "Force JackettIO Hostname",
       "env_variable": "FORCE_JACKETTIO_HOSTNAME",
       "placeholder": "(blank)",
-      "hint": "Public hostname for internal JackettIO URLs.",
-      "required": true
+      "hint": "Public hostname for internal JackettIO URLs."
     },
     {
       "type": "text",
       "label": "Force JackettIO Port",
       "env_variable": "FORCE_JACKETTIO_PORT",
       "placeholder": "(blank)",
-      "hint": "Public port for internal JackettIO URLs.",
-      "required": true
+      "hint": "Public port for internal JackettIO URLs."
     },
     {
       "type": "text",
       "label": "Force JackettIO Protocol",
       "env_variable": "FORCE_JACKETTIO_PROTOCOL",
       "placeholder": "(blank)",
-      "hint": "Public protocol for internal JackettIO URLs.",
-      "required": true
+      "hint": "Public protocol for internal JackettIO URLs."
     },
     {
       "type": "url",
@@ -444,8 +420,7 @@
       "label": "Default Stremio-Jackett Timeout (ms)",
       "env_variable": "DEFAULT_STREMIO_JACKETT_TIMEOUT",
       "placeholder": "(inherits DEFAULT_TIMEOUT)",
-      "hint": "Timeout for Stremio-Jackett API requests.",
-      "required": true
+      "hint": "Timeout for Stremio-Jackett API requests."
     },
     {
       "type": "url",
@@ -461,8 +436,7 @@
       "env_variable": "DEFAULT_STREMTHRU_STORE_TIMEOUT",
       "default": 15000,
       "placeholder": "15000",
-      "hint": "Timeout for StremThru store addon.",
-      "required": true
+      "hint": "Timeout for StremThru store addon."
     },
     {
       "type": "url",
@@ -507,8 +481,7 @@
       "label": "Default Peerflix Timeout (ms)",
       "env_variable": "DEFAULT_PEERFLIX_TIMEOUT",
       "placeholder": "(inherits DEFAULT_TIMEOUT)",
-      "hint": "Timeout for Peerflix addon requests.",
-      "required": true
+      "hint": "Timeout for Peerflix addon requests."
     },
     {
       "type": "url",
@@ -523,8 +496,7 @@
       "label": "Default Easynews+ Timeout (ms)",
       "env_variable": "DEFAULT_EASYNEWS_PLUS_TIMEOUT",
       "placeholder": "(inherits DEFAULT_TIMEOUT)",
-      "hint": "Timeout for Easynews+ addon.",
-      "required": true
+      "hint": "Timeout for Easynews+ addon."
     },
     {
       "type": "url",
@@ -539,8 +511,7 @@
       "label": "Default Easynews++ Timeout (ms)",
       "env_variable": "DEFAULT_EASYNEWS_PLUS_PLUS_TIMEOUT",
       "placeholder": "(inherits DEFAULT_TIMEOUT)",
-      "hint": "Timeout for Easynews++ addon.",
-      "required": true
+      "hint": "Timeout for Easynews++ addon."
     },
     {
       "type": "url",
@@ -570,8 +541,7 @@
       "label": "Default Easynews Timeout (ms)",
       "env_variable": "DEFAULT_EASYNEWS_TIMEOUT",
       "placeholder": "(inherits DEFAULT_TIMEOUT)",
-      "hint": "Timeout for Easynews addon.",
-      "required": true
+      "hint": "Timeout for Easynews addon."
     },
     {
       "type": "url",
@@ -586,16 +556,14 @@
       "label": "Default Debridio Timeout (ms)",
       "env_variable": "DEFAULT_DEBRIDIO_TIMEOUT",
       "placeholder": "(inherits DEFAULT_TIMEOUT)",
-      "hint": "Timeout for Debridio addon.",
-      "required": true      
+      "hint": "Timeout for Debridio addon."
     },
     {
       "type": "number",
       "label": "Default DMM Cast Timeout (ms)",
       "env_variable": "DEFAULT_DMM_CAST_TIMEOUT",
       "placeholder": "(inherits DEFAULT_TIMEOUT)",
-      "hint": "Timeout for DMM Cast addon.",
-      "required": true
+      "hint": "Timeout for DMM Cast addon."
     },
     {
       "type": "number",
@@ -611,4 +579,4 @@
   ],
   "created_at": 1716899794000,
   "updated_at": 1716899794000
-}
+    }
