--- a/apps/vikunja/config.json
+++ b/apps/vikunja/config.json
@@ -16,9 +16,10 @@
   "website": "https://vikunja.io",
   "form_fields": [
     {
-      "type": "random",
-      "label": "Vikunja database password",
-      "env_variable": "VIKUNJA_DB_PASSWORD"
+      "type": "text",
+      "label": "Server IP Address",
+      "env_variable": "SERVER_IP",
+      "required": true
     },
     {
       "type": "random",
