--- a/apps/netbird/docker-compose.yml
+++ b/apps/netbird/docker-compose.yml
@@ -1,18 +1,32 @@
+version: "3.8"
+
 services:
   netbird:
     container_name: netbird
     image: netbirdio/netbird:latest
+    # use host networking so WG interface is shared with the host
+    network_mode: host
+
+    # inject upstream DNS servers into the container
+    dns:
+      - 1.1.1.1
+      - 8.8.8.8
+
     environment:
       - NB_SETUP_KEY=${NB_SETUP_KEY}
-      - NB_DNS_LABELS=${NB_DNS_LABELS}
+      - NB_DNS_LABELS=${NB_DNS_LABELS}       # e.g. "runtipi"
       - NB_LOG_LEVEL=${NB_LOG_LEVEL-info}
+
     cap_add:
       - NET_ADMIN
       - SYS_ADMIN
       - SYS_RESOURCE
-    network_mode: host
-    restart: unless-stopped
+
+    # persist NetBird state across restarts
     volumes:
       - ${APP_DATA_DIR}/data:/etc/netbird
+
+    restart: unless-stopped
+    # your custom Docker label is fine but not required for DNS:
     labels:
-      runtipi.managed: true
+      runtipi.managed: "true"
